2003-01-10  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/mdb/gda-mdb-provider.c (get_mdb_procedures): implemented
	GDA_CONNECTION_SCHEMA_PROCEDURES.
	(gda_mdb_provider_open_connection): read the all catalogs.
	(gda_mdb_provider_get_server_version): adapted to mdb-tools CVS.

2003-01-09  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #87321
	
	* libgda/gda-row.[ch] (gda_row_new, gda_row_new_from_list): added a
	#GdaDataModel argument, so that implementations can associate the
	GdaRow with the GdaDataModel that contains it.

	* libgda/gda-data-model.c (gda_data_model_foreach):
	* libgda/gda-data-model-array.c (gda_data_model_array_append_row):
	* libgda/gda-data-model-hash.c (gda_data_model_hash_append_row):
	* providers/freetds/gda-freetds-recordset.c (gda_freetds_get_current_row):
	* providers/mysql/gda-mysql-recordset.c (fetch_row,
	  gda_mysql_recordset_append_row):
	* providers/oracle/gda-oracle-recordset.c (fetch_row,
	  gda_oracle_recordset_append_row):
	* providers/postgres/gda-postgres-recordset.c (get_row):
	* providers/sqlite/gda-sqlite-recordset.c (get_row):
	adapted to changes in gda_row_new.

2003-01-09  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/mysql/gda-mysql-provider.c
	(gda_mysql_provider_begin_transaction):
	(gda_mysql_provider_commit_transaction):
	(gda_mysql_provider_rollback_transaction): don't allow transactions in
	read-only connections.

	* providers/oracle/gda-oracle-provider.c
	(gda_oracle_provider_begin_transaction):
	(gda_oracle_provider_commit_transaction):
	(gda_oracle_provider_rollback_transaction): ditto.

	* providers/sqlite/gda-sqlite-provider.c
	(gda_sqlite_provider_begin_transaction):
	(gda_sqlite_provider_commit_transaction):
	(gda_sqlite_provider_rollback_transaction): ditto.

2003-01-09  Rodrigo Moya <rodrigo@gnome-db.org>

	Fixes #78847

	* libgda/gda-connection.c (gda_connection_get_options): added missing
	function.

	* providers/mysql/gda-mysql-provider.c (process_sql_commands): added