@@ -1,3 +1,10 @@
+2003-01-11  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* providers/mysql/gda-mysql-provider.c (add_aggregate_row): fixed the
+	AGGREGATES schema returned data.
+	(get_mysql_aggregates): create the data model with the correct number
+	of columns.
+
 2003-01-10  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* providers/mdb/gda-mdb-provider.c (get_mdb_procedures): implemented
